# jumbo-vite-template

./: README.md
vite/template/__MACOSX/template/: ._vite-starter-template-js
vite/template/__MACOSX/template/vite-demo-js/: ._package.json
vite/template/template/vite-starter-template-js/: package-lock.json  package.json
vite/template/template/vite-starter-template-js/client/: .eslintrc.cjs  .gitignore  .prettierc.json  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
vite/template/template/vite-starter-template-js/client/src/: i18n.js  main.jsx
vite/template/template/vite-starter-template-js/client/src/@jumbo/components/: index.js
vite/template/template/vite-starter-template-js/client/src/@jumbo/utilities/: constants.js  cookies.js  formatHelpers.js  helpers.js  styleHelpers.js  systemHelpers.js
vite/template/template/vite-starter-template-js/client/src/app/: App.jsx
vite/template/template/vite-starter-template-js/client/src/app/_components/: index.js
vite/template/template/vite-starter-template-js/client/src/app/_config/: index.js
vite/template/template/vite-starter-template-js/client/src/app/_hoc/: withAuth.jsx  withGuest.jsx
vite/template/template/vite-starter-template-js/client/src/app/_hooks/: index.js
vite/template/template/vite-starter-template-js/server/: main.py  pyproject.toml
vite/template/template/vite-starter-template-js/server/config/: config.py
vite/template/template/vite-starter-template-js/server/routes/: amount_deposit.py  auth.py  forgot_password.py  two_factor_auth.py
(+869 files in other folders)
